# funtech-orders

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.consumer  Dockerfile.worker  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260209_0917_16b575912a28_initial_migration.py
app/: main.py
app/api/: auth.py  orders.py  router.py
app/api/tests/: auth_tests.py  conftest.py  orders_tests.py
app/cache/: __init__.py  decorators.py  order_cache.py
app/core/: config.py  dependencies.py  logging.py  security.py
app/db/: base.py
app/db/models/: order.py  user.py
app/db/repositories/: order_repository.py  user_repository.py
app/kafka/: consumer.py  producer.py
app/schemas/: auth.py  order.py
app/services/: auth_service.py  auth_service_tests.py  order_service.py  order_service_tests.py
app/tasks/: __init__.py  broker.py  order_tasks.py
consumer/: main.py
